@@ -8,6 +8,8 @@ import sphinx
 extensions = ['sphinx.ext.autodoc', 'sphinx.ext.doctest', 'sphinx.ext.todo',
               'sphinx.ext.autosummary', 'sphinx.ext.extlinks']
 
+#intersphinx_mapping = {'python': ('http://docs.python.org/dev', None)}
+
 master_doc = 'contents'
 templates_path = ['_templates']
 exclude_patterns = ['_build']
